--- a/imooc-security-demo/pom.xml
+++ b/imooc-security-demo/pom.xml
@@ -12,7 +12,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>imooc-security-demo</name>
     <description>Demo project for Spring Boot</description>
-
+    <packaging>jar</packaging>
     <properties>
         <java.version>1.8</java.version>
     </properties>
