--- a/imooc-security-demo/src/main/resources/application.properties
+++ b/imooc-security-demo/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.password=123456
 spring.session.store-type=none
 spring.http.log-request-details=true
 
-spring.security.user.name=user
-spring.security.user.password=123456
+#spring.security.user.name=user
+#spring.security.user.password=123456
