--- a/imooc-security-browser/pom.xml
+++ b/imooc-security-browser/pom.xml
@@ -27,6 +27,12 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.54</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
