增加登陆时的图形验证码

--- a/imooc-security-demo/src/main/resources/application.properties
+++ b/imooc-security-demo/src/main/resources/application.properties
@@ -12,5 +12,7 @@ spring.http.log-request-details=true
 #spring.security.user.password=123456
 
 imooc.security.code.image.length = 4
-imooc.security.code.image.width = 100
-imooc.security.code.image.url = /authentication/form,/user/*
+#imooc.security.code.image.width = 100
+imooc.security.code.image.url = /authentication/form
+
+server.servlet.session.timeout=600
