--- a/imooc-security-demo/src/main/resources/application.properties
+++ b/imooc-security-demo/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.http.log-request-details=true
 
 imooc.security.code.image.length = 4
 #imooc.security.code.image.width = 100
-imooc.security.code.image.url = /authentication/form
+
+imooc.security.code.image.url =
+imooc.security.code.sms.url =
 
 server.servlet.session.timeout=600
