--- a/imooc-security-demo/src/main/resources/application.properties
+++ b/imooc-security-demo/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mytest?useUnicode=true&charact
 spring.datasource.username=root
 spring.datasource.password=123456
 
-spring.session.store-type=none
+spring.session.store-type=redis
 spring.http.log-request-details=true
 
 #spring.security.user.name=user
@@ -17,4 +17,4 @@ imooc.security.code.image.length = 4
 imooc.security.code.image.url =
 imooc.security.code.sms.url =
 
-server.servlet.session.timeout=600
+server.servlet.session.timeout=6000
