--- a/imooc-security-core/pom.xml
+++ b/imooc-security-core/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.imooc.security</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <groupId>com.imooc.security</groupId>
     <artifactId>imooc-security-core</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>imooc-security-core</name>
@@ -14,14 +15,19 @@
     <packaging>jar</packaging>
     <properties>
         <java.version>1.8</java.version>
-    </properties>s
+    </properties>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
         <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-            <version>2.3.4.RELEASE</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
         </dependency>
 
         <dependency>
@@ -88,6 +94,11 @@
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
             <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.1.4.RELEASE</version>
         </dependency>
 
 
