--- a/imooc-security-demo/pom.xml
+++ b/imooc-security-demo/pom.xml
@@ -18,9 +18,15 @@
     </properties>
 
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>com.imooc.security</groupId>
             <artifactId>imooc-security-browser</artifactId>
+            <version>${imooc.security.version}</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>com.imooc.security</groupId>
+            <artifactId>imooc-security-app</artifactId>
             <version>${imooc.security.version}</version>
         </dependency>
 
