--- a/imooc-security-demo/src/main/resources/application.properties
+++ b/imooc-security-demo/src/main/resources/application.properties
@@ -18,8 +18,8 @@ imooc.security.code.image.url =
 imooc.security.code.sms.url =
 
 server.servlet.session.timeout=6000
-#security.oauth2.client.client-id=yueqi
+security.oauth2.client.client-id=yueqi
 #security.oauth2.client.id=yueqi
 #security.oauth2.clientId=yueqi
-#security.oauth2.client.client-secret=client-secret-yueqi
+security.oauth2.client.client-secret=client-secret-yueqi
 #security.oauth2.client.user-authorization-uri=/oauth/authorize
