基于jwt的sso应用

--- a/imooc-security-demo/src/main/resources/application.properties
+++ b/imooc-security-demo/src/main/resources/application.properties
@@ -18,8 +18,13 @@ imooc.security.code.image.url =
 imooc.security.code.sms.url =
 
 server.servlet.session.timeout=6000
-security.oauth2.client.client-id=yueqi
-#security.oauth2.client.id=yueqi
-#security.oauth2.clientId=yueqi
-security.oauth2.client.client-secret=client-secret-yueqi
+#在类中配置了Oauth属性之后这里的配置会失效
+#security.oauth2.client.client-id=yueqi
+#security.oauth2.client.client-secret=client-secret-yueqi
 #security.oauth2.client.user-authorization-uri=/oauth/authorize
+
+imooc.security.oauth2.clients[0].clientId = yueqi
+imooc.security.oauth2.clients[0].clientSecret = yueqisecret
+imooc.security.oauth2.clients[0].accessTokenValidateSeconds = 3600
+imooc.security.oauth2.clients[1].clientId = test
+imooc.security.oauth2.clients[1].clientSecret = test
