--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 		<module>imooc-security-browser</module>
         <module>imooc-security-core</module>
         <module>imooc-security-demo</module>
+        <module>imooc-security-authority</module>
         <!--<module>sso-demo</module>-->
     </modules>
 
